--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
     "jsdom": "^27.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
