--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.2.0",
+    "bootstrap-icons": "^1.13.1",
     "jsdom": "^27.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
